AI-65 customer settings
